--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+html, body, #root, .App {
+height: 100%;
+width: 100%;
+background: hsl(212, 45%, 89%);
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 325px 1fr;
+  justify-content: center;
+  align-items: center;
+  font-family: Outfit, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  grid-column: 2;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-items: center;
+  width: 320px;
+  padding: 16px;
+  text-align: center;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 20px;
+  box-shadow: 4px hsl(220, 15%, 55%);
+  color: hsl(218, 44%, 22%);
 }
 
-.App-link {
-  color: #61dafb;
+.card-img {
+  width: auto;
+  height: auto;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-text {
+  margin: 18px
 }
+
+.card-title {
+  font-size: 22px;
+  font-weight: 700;
+  padding-bottom: 15px;
+}
+
+.card-p {
+  color: hsl(220, 15%, 55%);
+  font-size: 15px;
+  font-weight: 400;
+}
+
