--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ background: hsl(212, 45%, 89%);
 
 .App {
   display: grid;
-  grid-template-columns: 1fr 325px 1fr;
+  grid-template-columns: 1fr 320px 1fr;
   justify-content: center;
   align-items: center;
   font-family: Outfit, sans-serif;
@@ -30,22 +30,20 @@ background: hsl(212, 45%, 89%);
   text-align: center;
   background-color: hsl(0, 0%, 100%);
   border-radius: 20px;
-  box-shadow: 4px hsl(220, 15%, 55%);
+  box-shadow: 0px 10px 25px hsl(220, 15%, 81%);
   color: hsl(218, 44%, 22%);
 }
 
 .card-img {
-  width: auto;
-  height: auto;
   border-radius: 10px;
 }
 
 .card-text {
-  margin: 18px
+  margin: 15px
 }
 
 .card-title {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 700;
   padding-bottom: 15px;
 }
@@ -53,6 +51,18 @@ background: hsl(212, 45%, 89%);
 .card-p {
   color: hsl(220, 15%, 55%);
   font-size: 15px;
-  font-weight: 400;
+  letter-spacing: -.01em;
+}
+
+@media screen and (min-width: 445px) {
+  .App {
+    grid-template-columns: 1fr 290px 1fr;
+  }
+
+  .card {
+    width: 290px;
+    padding: 16px;
+  }
+
 }
 
