--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
-
-*{
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-
-html, body, #root, .App {
-height: 100%;
-width: 100%;
-background: hsl(212, 45%, 89%);
-}
-
 .App {
-  display: grid;
-  grid-template-columns: 1fr 320px 1fr;
-  justify-content: center;
-  align-items: center;
-  font-family: Outfit, sans-serif;
-}
-
-.card {
+  height: 100%;
+  width: 100%;
   grid-column: 2;
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  width: 320px;
-  padding: 16px;
-  text-align: center;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 20px;
-  box-shadow: 0px 10px 25px hsl(220, 15%, 81%);
-  color: hsl(218, 44%, 22%);
+  display: grid;
+  grid-template-rows: 1fr auto;
+  align-items: center;
 }
-
-.card-img {
-  border-radius: 10px;
-}
-
-.card-text {
-  margin: 15px
-}
-
-.card-title {
-  font-size: 18px;
-  font-weight: 700;
-  padding-bottom: 15px;
-}
-
-.card-p {
-  color: hsl(220, 15%, 55%);
-  font-size: 15px;
-  letter-spacing: -.01em;
-}
-
-@media screen and (min-width: 445px) {
-  .App {
-    grid-template-columns: 1fr 290px 1fr;
-  }
-
-  .card {
-    width: 290px;
-    padding: 16px;
-  }
-
-}
-
